--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-opencv-python
-cmake
-pyyaml
+numpy==1.21.0
+pydub==0.25.1
+opencv-python-headless==4.5.3.56
+cmake==3.21.1
+PyYAML==5.4.1
 streamlit==1.22.0
-pydub
+dlib==19.24.0
 
 #Fork of face_recognition using prebuild dlib library instead
 face_recognition @ git+https://github.com/thetoby9944/face_recognition
