--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-opencv-python==4.8.1.78
-cmake==3.28.1
-PyYAML==6.0
+opencv-python
+cmake
+pyyaml
 streamlit==1.29.0
+
+#Fork of face_recognition using prebuild dlib library instead
+face_recognition @ git+https://github.com/thetoby9944/face_recognition
+
 pydub==0.25.1
 streamlit_option_menu==0.3.2
 numpy
 
 
-
-#Fork of face_recognition using prebuild dlib library instead
-face_recognition @ git+https://github.com/thetoby9944/face_recognition
 
