--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-opencv-python
+opencv-contrib-python==4.8.1.78
+opencv-python==4.8.1.78
+opencv-python-headless==4.8.0.74
 cmake
 pyyaml
 streamlit==1.29.0
+pydub==0.25.1
+streamlit_option_menu==0.3.2
+numpy
+
 
 #Fork of face_recognition using prebuild dlib library instead
 face_recognition @ git+https://github.com/thetoby9944/face_recognition
 
-pydub==0.25.1
-streamlit_option_menu==0.3.2
-numpy
 
 
 
