--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pyyaml
 streamlit==1.29.0
 pydub
 streamlit_option_menu
-numpy
+numpy==1.26.2
 
 #Fork of face_recognition using prebuild dlib library instead
 face_recognition @ git+https://github.com/thetoby9944/face_recognition
