--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ streamlit==1.29.0
 pydub
 streamlit_option_menu
 numpy==1.26.2
+ffmpeg
 
 #Fork of face_recognition using prebuild dlib library instead
 face_recognition @ git+https://github.com/thetoby9944/face_recognition
